syntax = "proto3";

option csharp_namespace = "GrpcServer";

package product;

// Định nghĩa service

service ProductGrpc{
    rpc GetProductInfo (ProductRequest) returns (GetProductResponse);

    rpc GetAllProduct(GetAllProductRequest) returns (stream GetProductResponse);

    rpc BulkInsertProduct(stream ProductRequest) returns  (BulkInsertResponse);
}


// Input Message
message ProductRequest{
    int32 product_id = 1;
}

message GetAllProductRequest{

}

message BulkInsertResponse {
    int32 count = 1;
    string message = 2;
}



message GetProductResponse{
    int32 id = 1;
    string name = 2;
    double price = 3;
    bool is_available = 4;
}